# opendu

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-train.txt  requirements.txt
.github/workflows/: operating-environment.yaml
builders/: commons.py  sgd.py  viggo.py
builders/base/: core.py
builders/sgd/: generate_intent.py  generate_slot.py  sgd_intent.gin  sgddataprocess.sh
converter/: README.md  client.py  config.py  converter.py  lug_config.py  lug_index.py  lug_serve.py  lugconfig.py  openai_example.json  openai_parser.py  openapi_example.json  openapi_parser.py  pt.gin  pt.py  pt_client.py  schema_parser.py  sgd_slot.gin  test_converter.py
converter/examples/: openai_example.json  openapi_petstore_v2.0.json
converter/openai_examples/: recognizers.json
core/: annotation.py  commons.py  config.py  embedding.py  prompt.py  retriever.py
datasets/sgd/: README.md  generate_intent.py  generate_slot.py  schema.json  sgd.gin  sgd_intent.gin  (+4 more)
du/: README.md  pt.gin  pt.py
examples/: setup.sh
factories/: sgd.py  viggo.py
finetune/: README.md  commons.py  embedding.py  find_k_for_prompt.py  fine_tune_generation.sh  finetune.py  generation.py  generation.sh  script.sh  sgd.py  test.py  viggo.py
ftconverter/: converter.py  finetune.py  script.sh
inference/: cmd.py  converter.py  index.py  lug_index.py  lug_serve.py  schema_parser.py  serve.py
opencui/: design.md
opencui_lug/: __init__.py
opendu/: __init__.py
retrieval/: embedding.py  retriever.py
script/: tag-build-image.sh
structifier/: fc_test.py  structifier.py
(+150 files in other folders)
